Added SED plotting
Former-commit-id: e67af9c8c4d5ae50c2a05324510876adc53c279a

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,17 +27,11 @@
    "source": [
     "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "sort_par = \"rg_src_id\" # \"flux\"\n",
-    "redo_src_sel = False\n",
-    "only_sel_srcs = False\n",
     "show_skymaps = False\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = []\n",
-    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
-    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL\n",
-    "#srcs_ids = []\n",
-    "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\""
+    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL"
    ]
   },
   {
@@ -60,6 +54,9 @@
     "from IPython.display import display\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from regions import CircleSkyRegion\n",
     "from astropy import units as uu\n",
     "from astropy.coordinates import SkyCoord\n",
@@ -73,19 +70,10 @@
     "\n",
     "from vasca.utils import mag2flux, sel_sources, dd_filter2id\n",
     "\n",
-    "#Setup some global setup parameters that usually don't need to be adjusted\n",
-    "\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"coadd_ffactor\",\"coadd_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_xv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"coadd_ffactor\",\"coadd_fdiff_s2n\",\"sel\"]\n",
-    "\n",
     "#Load region\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
     "\n",
-    "#Select source pool to show\n",
-    "if redo_src_sel:\n",
-    "    sel_vasca =  sel_sources(rg.tt_sources)\n",
-    "    rg.tt_sources[\"sel\"][:]=sel_vasca \n",
     "print(\"Nr sources:\",len(rg.tt_sources),\"selected:\",rg.tt_sources[\"sel\"].sum())\n",
     "    \n",
     "#Subselect sources based on choice\n",
@@ -93,13 +81,10 @@
     "    rg.tt_sources.add_index(\"rg_src_id\")\n",
     "    idx_srcs = rg.tt_sources.loc_indices[\"rg_src_id\", srcs_ids]\n",
     "    tt_srcs = Table(rg.tt_sources[idx_srcs])\n",
-    "elif only_sel_srcs:\n",
-    "    tt_srcs = rg.tt_sources[rg.tt_sources[\"sel\"]]\n",
     "else:\n",
     "    tt_srcs = rg.tt_sources\n",
     "\n",
     "nr_srcs = len(tt_srcs)\n",
-    "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
     "#display(tt_srcs)"
    ]
@@ -121,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f439e43d9994f649a6ab9c9c1812a8c",
+       "model_id": "8e2a5ee41d474ecb99b86e1e3220a613",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,12 +121,20 @@
    ],
    "source": [
     "def display_src_info(rg_src_id=0):\n",
-    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4), clear=True)\n",
-    "    plt.cla()\n",
-    "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
-    "    plt.show()\n",
-    "    \n",
+    "\n",
+    "    #Get source\n",
     "    tc_src = rg.get_src_from_id(rg_src_id)\n",
+    "\n",
+    "    #Prepare figure\n",
+    "\n",
+    "    fig, axs = plt.subplots(1,2,figsize=(20, 6),squeeze=True, num=\"Source ID \" + str(rg_src_id), clear=True, gridspec_kw={'width_ratios': [2, 1]})\n",
+    "    axs = axs.flatten()\n",
+    "    \n",
+    "    #Plot light curve und SED\n",
+    "    vvis.plot_light_curve(tc_src, rg_src_ids = rg_src_id, ax = axs[0]) #\n",
+    "    vvis.plot_sed(tc_src,ax = axs[1])\n",
+    "    plt.show()\n",
+    "\n",
     "    table_names = [\"tt_sources\",\"tt_simbad\"] # ,\"tt_coadd_sources\"\n",
     "    for table_name in table_names:\n",
     "        if table_name in tc_src._table_names:\n",
@@ -168,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5808078138824f96921d96966dcbabbb",
+       "model_id": "02d984ab7d34475e8fd7acd5cefd0108",
        "version_major": 2,
        "version_minor": 0
       },
