Added temperature to SED
Former-commit-id: 72a9809347437be7b2f5706c61114d06f5ba4afe

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -28,6 +28,7 @@
     "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "show_skymaps = False\n",
+    "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = []\n",
@@ -106,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e2a5ee41d474ecb99b86e1e3220a613",
+       "model_id": "4489acd936ad43ffa4cb184b0434fde5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +124,7 @@
     "def display_src_info(rg_src_id=0):\n",
     "\n",
     "    #Get source\n",
-    "    tc_src = rg.get_src_from_id(rg_src_id)\n",
+    "    tc_src = rg.get_src_from_id(rg_src_id, load_from_file = load_src_from_file)\n",
     "\n",
     "    #Prepare figure\n",
     "\n",
@@ -131,11 +132,11 @@
     "    axs = axs.flatten()\n",
     "    \n",
     "    #Plot light curve und SED\n",
-    "    vvis.plot_light_curve(tc_src, rg_src_ids = rg_src_id, ax = axs[0]) #\n",
+    "    vvis.plot_light_curve(tc_src, ax = axs[0]) #\n",
     "    vvis.plot_sed(tc_src,ax = axs[1])\n",
     "    plt.show()\n",
     "\n",
-    "    table_names = [\"tt_sources\",\"tt_simbad\"] # ,\"tt_coadd_sources\"\n",
+    "    table_names = [\"tt_sources\",\"tt_simbad\", \"tt_spectrum\"] # ,\"tt_coadd_sources\"\n",
     "    for table_name in table_names:\n",
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
@@ -161,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02d984ab7d34475e8fd7acd5cefd0108",
+       "model_id": "5e72391395894309b4cb7d6df1bef820",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +181,7 @@
     "    fig_lc = plt.figure(\"Light curves\",figsize=(10, 9), clear=True)\n",
     "    lc_min = lc_block_srcs * block_nr\n",
     "    lc_max = lc_min + lc_block_srcs if lc_min + lc_block_srcs<=nr_srcs-1 else nr_srcs\n",
-    "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max], ylim = [1.2,550])\n",
+    "    vvis.plot_light_curves(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max], ylim = [1.2,550])\n",
     "    plt.show()\n",
     "    #display(tt_srcs[lc_min:lc_max]) #[show_lc_pars]\n",
     "widgets.interactive( plot_lc_range, block_nr=(0,nr_blocks-1))"
@@ -315,8 +316,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "40b02103-e651-4c98-bd2f-24461ed03f7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[':esd']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\":esd\".split(\"-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4060d8a2-ed4a-4ef1-888a-99cafcc028ac",
    "metadata": {},
    "outputs": [],
    "source": []
