--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -32,7 +32,8 @@
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = []\n",
-    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL"
+    "srcs_ids = [55034 , 61491, 76243 ,92867,104078,588567,599887] # WDs secure, spectral or GAIA confirmation\n",
+    "#srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL"
    ]
   },
   {
@@ -71,6 +72,9 @@
     "\n",
     "from vasca.utils import mag2flux, sel_sources, dd_filter2id\n",
     "\n",
+    "from astroquery.gaia import Gaia\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "\n",
     "#Load region\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
@@ -107,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4489acd936ad43ffa4cb184b0434fde5",
+       "model_id": "c100cc8615ac45c1a619b9f5efbf9a57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(55034, 61491, 64360, 73354, 76243, 92867, 104…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(55034, 61491, 76243, 92867, 104078, 588567, 5…"
       ]
      },
      "execution_count": 3,
@@ -136,11 +140,20 @@
     "    vvis.plot_sed(tc_src,ax = axs[1])\n",
     "    plt.show()\n",
     "\n",
-    "    table_names = [\"tt_sources\",\"tt_simbad\", \"tt_spectrum\"] # ,\"tt_coadd_sources\"\n",
+    "    table_names = [\"tt_sources\",\"tt_simbad\"] # ,\"tt_coadd_sources\"\n",
     "    for table_name in table_names:\n",
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
     "            display(tc_src.__dict__[table_name])\n",
+    "    #Get GAIA info\n",
+    "    coord = SkyCoord(ra=tc_src.tt_simbad[\"ra\"].quantity[0], dec=tc_src.tt_simbad[\"dec\"].quantity[0], frame='icrs')\n",
+    "\n",
+    "    gq = Gaia.cone_search_async(coord, radius=1.0* uu.arcsec)\n",
+    "    gr = gq.get_results()\n",
+    "    gmag_abs = gr[\"phot_g_mean_mag\"][0] + 5.0 * np.log10(gr[\"parallax\"][0]) - 10.0\n",
+    "    print(\"GAIA Gmag\",gmag_abs, \"color\",gr[\"bp_rp\"][0])\n",
+    "    \n",
+    "    tc_src.tt_sed.pprint_all()\n",
     "\n",
     "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])"
    ]
@@ -162,12 +175,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e72391395894309b4cb7d6df1bef820",
+       "model_id": "eb5fd5b2720047b38561957e0a11cc60",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='block_nr', max=2), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
