Adding Vizier matching
Former-commit-id: 05ddc27fcb5391fe3a70c8bf2aec0edb35f0c820

--- a/vasca/examples/vasca_pipe_post_process.ipynb
+++ b/vasca/examples/vasca_pipe_post_process.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "937306a8-d6b3-45dd-981d-421919026ddb",
    "metadata": {},
    "outputs": [
@@ -24,32 +24,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-10-06 15:12:35.747\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m328\u001b[0m - \u001b[34m\u001b[1mLoading file with name './vasca_pipeline/ALL_10-800/region_ALL_10-800.fits'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:35.759\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_fields'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:35.785\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_filters'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:35.796\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_visits'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:35.814\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_detections'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:36.421\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_detections'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:36.636\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_sources'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:36.885\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_sources'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.525\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_src_id_map'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.561\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m777\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_detections\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.703\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m777\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_sources\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.718\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m777\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_coadd_sources\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.786\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m777\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_src_id_map\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.803\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_fields'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.805\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_filters'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.807\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_visits'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:37.958\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_detections'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:38.161\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_coadd_detections'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:38.255\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_sources'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:38.352\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_coadd_sources'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:38.357\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_src_id_map'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:38.358\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m602\u001b[0m - \u001b[34m\u001b[1mQuery simbad table\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:44.177\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_simbad'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:44.209\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_otypes'\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:44.212\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m602\u001b[0m - \u001b[34m\u001b[1mQuery I/355/gaiadr3 table\u001b[0m\n",
-      "\u001b[32m2023-10-06 15:12:44.226\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m680\u001b[0m - \u001b[34m\u001b[1mStarting Vizier query...\u001b[0m\n"
+      "\u001b[32m2023-10-06 15:25:58.212\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m328\u001b[0m - \u001b[34m\u001b[1mLoading file with name './vasca_pipeline/ALL_10-800/region_ALL_10-800.fits'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:58.220\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_fields'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:58.246\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_filters'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:58.256\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_visits'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:58.270\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:58.843\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:59.046\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:59.285\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:59.897\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m339\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_src_id_map'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:25:59.922\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m784\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_detections\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.052\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m784\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_sources\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.068\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m784\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_coadd_sources\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.137\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36msynch_src_sel\u001b[0m:\u001b[36m784\u001b[0m - \u001b[34m\u001b[1mSynchronizing selection in table tt_src_id_map\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.151\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_fields'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.153\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_filters'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.154\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_visits'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.301\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.500\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_coadd_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.595\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.695\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_coadd_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.701\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_src_id_map'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.702\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m602\u001b[0m - \u001b[34m\u001b[1mQuery simbad table\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:00.710\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m645\u001b[0m - \u001b[34m\u001b[1mStarting SIMBAD query for 100 sources..\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.373\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m647\u001b[0m - \u001b[34m\u001b[1m..query done.\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.469\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_simbad'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.496\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_otypes'\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.499\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m602\u001b[0m - \u001b[34m\u001b[1mQuery I/355/gaiadr3 table\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.513\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m684\u001b[0m - \u001b[34m\u001b[1mStarting Vizier query for 100 sources..\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.608\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mcross_match_cds\u001b[0m:\u001b[36m691\u001b[0m - \u001b[34m\u001b[1m..query done.\u001b[0m\n",
+      "\u001b[32m2023-10-06 15:26:02.659\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m157\u001b[0m - \u001b[34m\u001b[1mAdding table 'tt_gaiadr3'\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "str.replace() takes no keyword arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_41795/1615788758.py\u001b[0m in \u001b[0;36m<cell line: 31>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_match_cds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_table\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"simbad\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_match_cds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_to_fits\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mregion_fname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".fits\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"_cat.fits\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: str.replace() takes no keyword arguments"
      ]
     }
    ],
@@ -84,7 +99,7 @@
     "rc = rg.get_region_catalog()\n",
     "rc.cross_match_cds(query_table=\"simbad\")\n",
     "rc.cross_match_cds()\n",
-    "rc.write_to_fits(region_fname.replace(\".fits\",\"_cat.fits\", overwrite=True))"
+    "rc.write_to_fits(region_fname.replace(\".fits\",\"_cat.fits\"), overwrite=True)"
    ]
   }
  ],
